Bug 337008 - Missing page scrollbars
Summary: Missing page scrollbars
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.13.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-03 14:54 UTC by Andrea Iacovitti
Modified: 2014-07-03 16:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments
testcase (415 bytes, text/html)
2014-07-03 15:20 UTC, Andrea Iacovitti
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Iacovitti 2014-07-03 14:54:23 UTC
Scrollbars are missing on http://blogs.sonymobile.com/ page

Track down: some script wants to remove overflow property previously set to 'hidden' and khtml fails on doing that.
Comment 1 Andrea Iacovitti 2014-07-03 15:20:41 UTC
Created attachment 87527 [details]
testcase
Comment 2 Andrea Iacovitti 2014-07-03 16:39:36 UTC
Git commit b201d93f17cab574d9a032117ffa39eaa44cb156 by Andrea Iacovitti.
Committed on 03/07/2014 at 16:29.
Pushed by aiacovitti into branch 'KDE/4.13'.

Remove as well the shorthand property itself from the list.
FIXED-IN: 4.13.3

M  +2    -1    khtml/css/css_renderstyledeclarationimpl.cpp
M  +1    -1    khtml/css/css_renderstyledeclarationimpl.h
M  +15   -9    khtml/css/css_valueimpl.cpp
M  +1    -1    khtml/css/css_valueimpl.h

http://commits.kde.org/kdelibs/b201d93f17cab574d9a032117ffa39eaa44cb156