Remove as well the shorthand property itself from the list.

BUG: 337008
FIXED-IN: 4.13.3